--- a/Diabetes Prediction/readme
+++ b/Diabetes Prediction/readme
@@ -1,1 +1,8 @@
-
+practice for all kinds of algorithms models.including:
+1.k-NN (k-Nearest Neighbors)
+2.Logistic regression
+3.Decision Tree
+4.Random Forest
+5.Gradient Boosting
+6.SVM (Support Vector Machine)
+7.Deep Learning
